--- a/web/css/superfish.css
+++ b/web/css/superfish.css
@@ -20,7 +20,7 @@
 .sf-menu li {
 	float:			left;
 	position:		relative;
-	font-family: Tahoma, sans-serif;
+	font-family: font-family: Arial, Helvetica, fixed;
 	font-size: 11px;
 	cursor: pointer;
 	white-space: nowrap;
