--- a/web/tmpl/FeatList.tmpl
+++ b/web/tmpl/FeatList.tmpl
@@ -288,7 +288,7 @@ Filter Table Rows:
 </select>
 <!-- <span class=small>Tip: Use "*" for wildcards, and "!" to search for not containing</span> -->
 <div class ="small"> Feature Count: <TMPL_VAR NAME="FEAT_COUNT"></div>
-<TABLE id='feat_table' class="ui-widget-content ui-corner-all">
+<TABLE id='feat_table' class="small ui-widget-content ui-corner-all">
  <THEAD align=left>
   <tr>
    <TH> </TH>
