--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -152,10 +152,11 @@ $(document).ready( function() {
 	</li>	
 -->
         <li><a id=forums href="https://forums.iplantcollaborative.org/viewforum.php?f=10" target="_self">Forums</a></li>
-	<li><a href='javascript:void(0)'>Preferences</a>
+	<li><a href='javascript:void(0)'>Data</a>
 	 <ul>
 	   <li><a href="UserPage.pl" target="_self">User Profile</a></li>
-	   <li><a href="Groups.pl" target="_self">User/Data Groups</a></li>
+	   <li><a href="Groups.pl" target="_self">User Groups</a></li>
+	   <li><a href="ListView.pl" target="_self">Data Lists</a></li>
 <!--	  <li><a href="javascript:void(0)" target="_self">Animation</a>
 	    <ul class="animations">
 	      <li><a href="javascript:void(0)" target="_self" onClick="define_animation_speed(0)">Off</a></li>
