--- a/web/tmpl/header.tmpl
+++ b/web/tmpl/header.tmpl
@@ -13,13 +13,16 @@ content="LFIw-oo_UpW85cg_ONvoPuH1IpWYjlfmipsWhOvo1kk" />
 
 
 <!-- This is the implementation of jquery into the header of all CoGe pages -->
- <SCRIPT language="JavaScript" type="text/javascript" src="js/jquery-1.3.2.min.js"></SCRIPT>
+<!-- <SCRIPT language="JavaScript" type="text/javascript" src="js/jquery-1.3.2.min.js"></SCRIPT> -->
+<SCRIPT language="JavaScript" type="text/javascript" src="js/jquery-1.8.0.min.js"></SCRIPT>
 
 <!-- Implementation of jQuery UI, first line javascript, second for css  -->
-<SCRIPT language="JavaScript" type="text/javascript" src="js/jquery-ui-1.7.2.custom.min.js"></SCRIPT>
+<!-- <SCRIPT language="JavaScript" type="text/javascript" src="js/jquery-ui-1.7.2.custom.min.js"></SCRIPT> -->
+<SCRIPT language="JavaScript" type="text/javascript" src="js/jquery-ui-1.8.23.custom.min.js"></SCRIPT>
 
 <link rel="stylesheet" type="text/css" href="css/jquery-ui-1.7.2.custom.css" />
 <link rel="stylesheet" type="text/css" href="css/jquery-ui-coge-supplement.css" />
+<link rel="stylesheet" type="text/css" href="css/jquery.ui.autocomplete.css" />
 
  <SCRIPT language="JavaScript" type="text/javascript" src="js/jquery.cookie.js"></SCRIPT>
 <SCRIPT language="JavaScript" type="text/javascript" src="js/superfish.js"></SCRIPT>
@@ -156,7 +159,7 @@ $(document).ready( function() {
 	 <ul>
 	   <li><a href="UserPage.pl" target="_self">User Profile</a></li>
 	   <li><a href="Groups.pl" target="_self">User Groups</a></li>
-	   <li><a href="ListView.pl" target="_self">Data Lists</a></li>
+	   <li><a href="Lists.pl" target="_self">Data Lists</a></li>
 <!--	  <li><a href="javascript:void(0)" target="_self">Animation</a>
 	    <ul class="animations">
 	      <li><a href="javascript:void(0)" target="_self" onClick="define_animation_speed(0)">Off</a></li>
